removed height prop from the tech-exp container to fill to bottom of page especially on mobile screens. This should fix the issue where the container background ends before the page ends.

--- a/styles/indexStyles.css
+++ b/styles/indexStyles.css
@@ -69,7 +69,7 @@
     align-items: center;
     flex-direction: column;
     background: linear-gradient(to bottom, transparent, var(--navbar-blue));
-    height: 50vh;
+    /* height: 50vh; */
 }
 
 #tech-title {
